--- a/Code/DBProject/Patient/PatientMaster.Master
+++ b/Code/DBProject/Patient/PatientMaster.Master
@@ -112,55 +112,19 @@
 
 
 
-        <!--- Footer starts here -->
-        <footer class="footer-distributed"  >
+       <!--- Footer starts here -->
+<footer class="footer-distributed"  >
 
-			<div class="footer-left">
+	<div class="footer-left">
 
-				<h3>MedicX<span>4</span></h3>
+		<h3>Hospital Management</h3>
 
-				<p class="footer-company-name">MedicX4 Health Care &copy; 2017</p>
-			</div>
+		<p class="footer-company-name">Hospital Management System</p>
+	</div>
 
+</footer>
 
-			<div class="footer-center">
-
-				<div>
-					<i class="fa fa-map-marker"></i>
-					<p><span>Milaad St Block B</span> Faisal Town, Lahore</p>
-				</div>
-
-				<div>
-					<i class="fa fa-phone"></i>
-					<p>0322 - 7561001</p>
-				</div>
-
-				<div>
-					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@medicx4.com">support@medicx4.com</a></p>
-				</div>
-
-			</div>
-
-			<div class="footer-right">
-
-				<p class="footer-company-about">
-					<span>About the company</span>
-					Our mission is to provide quality health services to all in a comfortable and cozy environment.
-                    The clinic primarily offers consultations and is not equipped to take emergencies.
-				</p>
-
-    			<div class="footer-icons">
-
-    				<a href="#"><i class="fa fa-facebook"></i></a>
-
-    			</div>
-
-			</div>
-
-		</footer>
-
-        <!--- Footer ends here -->
+       <!--- Footer ends here -->
 
 
 
